--- a/0_cover/abstract.tex
+++ b/0_cover/abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Resumo}
 \thispagestyle{empty}
 
-Neste trabalho descrevemos uma abordagem para realizar síntese em sistemas de controle discretos com realimentação de estados em cima de requisitos de performance a qual é baseada em técnicas de síntese indutiva guiada por contra-exemplo (CEGIS). Nessa abordagem verifica-se um requisito de performance (\textit{e.g.} tempo de acomodação e máxima ultrapassagem) em um determinado sistema de controle com o objetivo de saber se satisfaz ao valor desejado para esse requisito, caso não satisfaça, deve-se encontrar um sistema que satisfaça ao requisito desejado, e nesse caso, redefine-se o controlador do sistema. Para geração do controlador, utilizamos uma técnica de aprendizagem onde a cada iteração que a verificação do requisito não satisfaça, aprende-se que esse controlador não nos serve. Na verificação desses requisitos de performance em sistemas de controle discreto, consideramos a fragilidade (\textit{erro de quantização numérica, arredondamento, etc}) nos controladores utilizados. Essa abordagem é útil para auxiliar engenheiros de controle em seus projetos de sistemas de controle discreto, visto que essas fragilidades ocorrem durante a implementação em uma plataforma digital, e nesse caso, essa abordagem gera o sistema que satisfaz os requisitos desejados no projeto. Essa abordagem foi implementada utilizando o DSVerifier que é uma ferramenta que emprega verificação de modelo limitada (e ilimitada) baseada em, teorias de módulo de satisfatibilidade. Nossa abordagem foi avaliada em um conjunto de \textit{benchmarks} clássicos de sistemas de controle extraídas da literatura, bem como foi em \textit{benchmarks} específicos considerando diferentes autovalores. Os resultados experimentais mostram que a abordagem elaborada é eficaz para a síntese de requisitos de perfomance em sistemas de controles discreto com realimentação de estados, visto que considera problemas práticos de implementação (efeitos FWL), diferentemente de outros métodos que rotineiramente não consideram esses problemas.
+Neste trabalho descrevemos uma abordagem para realizar síntese em sistemas de controle discreto com realimentação de estados com respeito a requisitos de performance a qual é baseada em técnicas de síntese indutiva guiada por contraexemplo (CEGIS). Nessa abordagem verifica-se um requisito de performance (\textit{e.g.} tempo de assentamento e máximo sobressinal) em um determinado sistema de controle com o objetivo de saber se satisfaz ao valor desejado para esse requisito, caso não satisfaça, deve-se encontrar um sistema que satisfaça ao requisito desejado, e nesse caso, redefine-se o controlador do sistema. Para geração do controlador, utilizamos uma técnica de aprendizagem onde a cada iteração que a verificação do requisito não satisfaça, aprende-se que esse controlador não nos serve. Na verificação desses requisitos de performance em sistemas de controle discreto, consideramos a fragilidade (\textit{erro de quantização numérica, arredondamento, efeitos de FWL, etc}) nos controladores utilizados. Essa abordagem é útil para auxiliar engenheiros de controle em seus projetos de sistemas de controle discreto, visto que essas fragilidades ocorrem durante a implementação em uma plataforma digital, e nesse caso, essa abordagem gera o sistema que satisfaz os requisitos desejados no projeto. Essa abordagem foi implementada dentro do DSVerifier que é uma ferramenta que emprega verificação de modelo limitada (e ilimitada) baseada em, teorias de módulo de satisfatibilidade. Nossa abordagem foi avaliada em um conjunto de \textit{benchmarks} clássicos de sistemas de controle extraídos da literatura, bem como em \textit{benchmarks} específicos considerando diferentes autovalores e em diferentes configurações. Os resultados experimentais mostram que a abordagem elaborada é eficaz para a síntese de requisitos de perfomance em sistemas de controles discreto com realimentação de estados, visto que considera problemas práticos de implementação (efeitos FWL), diferentemente de outros métodos que rotineiramente não consideram esses problemas.
 
 \vspace*{\stretch{1}}
 
