--- a/0_cover/cover.tex
+++ b/0_cover/cover.tex
@@ -1,6 +1,6 @@
 % -- Titulo e Descricao ------------------------------------------------------
 \newcommand{\tittese}{%
-	\textsf{\bfseries\Large Síntese de Sistemas de Controle Discretos e Com Realimentação de Estados Baseada em Requisitos de Desempenho \\
+	\textsf{\bfseries\Large Verificação e Síntese de Controladores de Realimentação de Estados Estática com Garantias Formais de Desempenho Não-frágil \\
 	\vspace{0.8ex}
         }}
 
@@ -41,7 +41,7 @@ Programa de P\'os-Gradua\c{c}\~ao em Engenharia Elétrica}
 
 Manaus -- Amazonas
 
-Agosto de 2018
+Março de 2019
 \end{center}
 
 %}
@@ -67,7 +67,7 @@ Agosto de 2018
 \vspace*{2cm}
 \vspace*{\stretch{1}}
 
-Orientador: Prof. Ph.D. Lucas Carvalho Cordeiro \\
+Orientador: Prof. D.Sc. Eddie Batista de Lima Filho \\
 \end{center}
 
 %}
@@ -101,12 +101,12 @@ Banca Examinadora
 %TP Vision
 %\vspace{2em}
 
-Prof. Ph.D. Lucas Carvalho Cordeiro -- Presidente e Orientador\\
-Escola de Ciência da Computação -- UoM
+Prof. D.Sc. Eddie Batista de Lima Filho -- Presidente e Orientador\\
+TP Vision
 \vspace{2em}
 
-Prof. D.Sc. Eddie Batista de Lima Filho -- Co-orientador\\
-TP Vision
+Prof. Ph.D. Lucas Carvalho Cordeiro -- Co-orientador\\
+Escola de Ciência da Computação -- UoM
 \vspace{2em}
 
 Prof. D.Sc. Raimundo da Silva Barreto \\
@@ -122,7 +122,7 @@ Faculdade de Tecnologia -- UFAM
 
 Manaus -- Amazonas
 
-Agosto de 2018
+Março de 2019
 
 \end{center}
 %}
