--- a/3_related_work/related-work.tex
+++ b/3_related_work/related-work.tex
@@ -32,7 +32,7 @@ Apesar de não utilizar os métodos tradicionais de controle adaptativo, usando um
 
 Nilsosn {\it et al.}~\cite{nilsson2016correct} descrevem duas abordagens para sintetizar controladores correto por construção em sistemas de controle de cruzeiro adaptativo. Ambas as abordagens baseiam-se na computação em pontos fixos no domínio do controlador, a partir da qual a especificação em lógica linear temporal (LTL) pode ser aplicada. Uma calcula tais pontos fixos diretamente no espaço de estados contínuo, a outra em uma abstração de estados finitos da dinâmica não-linear.
 
-De acordo com os resultados experimentais, este trabalho se mostra eficaz para sistemas de controle de cruzeiro adaptativo. Porém, leva em consideração a síntese de controladores estáveis considerando a propriedade de \textit{safety}, mas n'ao aborda questões de projeto de controladores referentes a desempenho a resposta ao degrau.
+De acordo com os resultados experimentais, este trabalho se mostra eficaz para sistemas de controle de cruzeiro adaptativo. Porém, leva em consideração a síntese de controladores estáveis considerando a propriedade de \textit{safety}, mas não aborda questões de projeto de controladores referentes a desempenho a resposta ao degrau.
 
 \section{\textit{Formal Specification and Analysis Approaches for Spacecraft Attitude Control Requirements}}\label{sec:related-work-6}
 
@@ -42,7 +42,7 @@ Um ponto positivo desse trabalho foi que consideraram aspectos de desempenho na 
 
 \section{\textit{Robust Controller Synthesis of Switched Systems Using Counterexample Guided Framework}}\label{sec:related-work-7}
 
-Ravanbakhsh and Sankaranarayanan~\cite{ravanbakhsh2016robust} investigam o problema de sintetizar controladores robustos que asseguram que o sistema em malha fechada satisfaça uma especificação de \textit{reach-while-stay} de entrada, em que todas as trajetórias partindo de um conjunto inicial $I$, eventualmente atingem um conjunto de metas especificadas $G$, enquanto permanecem dentro de um conjunto seguro $S$. A ideia chave é: dado o modelo da planta que consiste em um sistema comutado de tempo contínuo controlado por um sinal de comutação externo e entradas de perturbação da planta, o controlador usa uma lei de realimentação de estado para controlar o sinal de comutação, a fim de garantir que as propriedades de correção desejadas sejam mantidas, independentemente das ações de perturbação. Para garantir a especificação de \textit{reach-while-stay}, a abordagem usa um certificado de prova na forma de uma função robusta de controle Lyapunov (\textit{robust control Lyapunov-like function} - RCLF). Para encontrar um RCLF, usa-se uma estrutura de síntese indutiva guiada por contra-exemplo (CEGIS), resolvendo iterativamente uma fórmula $\exists \forall \exists \forall$ usando solucionadores SMT livres de quantificação. Finalmente, utilizaram o problema de traduzir o RCLF sintetizado pela abordagem em uma implementação de controle.
+Ravanbakhsh and Sankaranarayanan~\cite{ravanbakhsh2016robust} investigam o problema de sintetizar controladores robustos que asseguram que o sistema em malha fechada satisfaça uma especificação de \textit{reach-while-stay} de entrada, em que todas as trajetórias partindo de um conjunto inicial $I$, eventualmente atingem um conjunto de metas especificadas $G$, enquanto permanecem dentro de um conjunto seguro $S$. A ideia chave é: dado o modelo da planta que consiste em um sistema comutado de tempo contínuo controlado por um sinal de comutação externo e entradas de perturbação da planta, o controlador usa uma lei de realimentação de estado para controlar o sinal de comutação, a fim de garantir que as propriedades de correção desejadas sejam mantidas, independentemente das ações de perturbação. Para garantir a especificação de \textit{reach-while-stay}, a abordagem usa um certificado de prova na forma de uma função robusta de controle Lyapunov (\textit{robust control Lyapunov-like function} - RCLF). Para encontrar um RCLF, usa-se uma estrutura de síntese indutiva guiada por contraexemplo (CEGIS), resolvendo iterativamente uma fórmula $\exists \forall \exists \forall$ usando solucionadores SMT livres de quantificação. Finalmente, utilizaram o problema de traduzir o RCLF sintetizado pela abordagem em uma implementação de controle.
 
 A técnica de síntese de controladores para sistemas de controle comutados apresentada aparesentou bons resultados pelo que se propos a fazer, considerando sistemas de controle em tempo contínuo. Porém, deixou de considerar aspectos de implementação desses controladores do mundo real, onde necessita-se trabalhar com sistemas em tempo discreto, e levar em conta aspectos de implementação, como efeitos de FWL. O problema de sintetizar controladores para satisfazer requisitos da propriedade \textit{reach-while-stay} tem sua importância, mas outros aspectos como estabilidade e requisitos de desempenham devem ser considerados em projeto de controladores para problemas do mundo real.
 
@@ -50,7 +50,7 @@ A técnica de síntese de controladores para sistemas de controle comutados aprese
 
 Hassani and Lee~\cite{hassani2016multi} apresentam um paradigma de projeto genérico multi-objetivo que utiliza otimização de enxame de particulas (\textit{particle swarm optimization} - PSO) com comportamento quântico (QPSO) para decidir a configuração ideal do controlador LQR para um determinado problema, considerando um conjunto de objetivos concorrentes. Existem três contribuições principais introduzidas nesse trabalho da seguinte forma: o algoritmo QPSO padrão é reforçado com um esquema de inicialização informado baseado no algoritmo de recozimento simulado e no mecanismo de seleção de vizinhança gaussiana, ele também é aumentado com uma estratégia de busca local que integra as vantagens do algoritmo memético no QPSO convencional, e também é introduzido um critério agregado de ponderação dinâmica que combina dinamicamente as restrições \textit{soft} e \textit{hard} com os objetivos de controle para fornecer ao projetista um conjunto de soluções ótimas de Pareto e permite que ela decida a solução de destino com base nas preferências práticas.
 
-O trabalho em questão se mostra bastante promissor, visto que faz uma certa análise a aspectos de desempenho de sistemas de controle. Apesar disso, a análise toda é feita considerando controladores em tempo contínuo. Apenas é feito uma ``melhoria`` nos parâmetros de desempenho do sistemas, mas não sintetiza controladores com base nesses parâmetros como requisitos necessários e específicos. Como não trabalha diretamente com sistemas de controle digital, consequentemente não leva em conta aspectos de implementação dos mesmo em microprocessadores, podendo gerar controladores que quando implementados nessas plataformas não se comporte conforme projetado, visto que podem sofrer com os efeitos de FWL, por exemplo.
+O trabalho em questão se mostra bastante promissor, visto que faz uma certa análise a aspectos de desempenho de sistemas de controle. Apesar disso, a análise toda é feita considerando controladores em tempo contínuo. Apenas é feito uma ``melhoria'' nos parâmetros de desempenho do sistemas, mas não sintetiza controladores com base nesses parâmetros como requisitos necessários e específicos. Como não trabalha diretamente com sistemas de controle digital, consequentemente não leva em conta aspectos de implementação dos mesmo em microprocessadores, podendo gerar controladores que quando implementados nessas plataformas não se comporte conforme projetado, visto que podem sofrer com os efeitos de FWL, por exemplo.
 
 
 \section{\textit{Formal Synthesis of Analytic Controllers for Sampled-Data Systems via Genetic Programming}}\label{sec:related-work-9}
@@ -62,20 +62,21 @@ De acordo com o estudo apresentado, a metodologia utlizada apresentou bons resul
 
 \section{\textit{Automated Formal Synthesis of Digital Controllers for State-Space Physical Plants}}\label{sec:related-work-10}
 
-Abate {\it et al.}~\cite{abate2017automated} propõem uma abordagem sólida e automatizada para sintetizar controladores digitais com realimentação seguros para plantas físicas representadas como modelos lineares invariantes no tempo. Os autores utilizaram síntese indutiva guiada por contra-exemplo (CEGIS) o qual possui duas fases: síntese de um controlador de realimentação estático que estabiliza o sistema, mas que pode não ser seguro para todas as condições iniciais. A segurança é então verificada via verificação de modelos limitada (\textit{bounded model checking} - BMC) ou aceleração abstrata; se a etapa de verificação falhar, um contra-exemplo é fornecido ao mecanismo de síntese e o processo itera até que um controlador seguro seja obtido.
+Abate {\it et al.}~\cite{abate2017automated} propõem uma abordagem sólida e automatizada para sintetizar controladores digitais com realimentação seguros para plantas físicas representadas como modelos lineares invariantes no tempo. Os autores utilizaram síntese indutiva guiada por contraexemplo (CEGIS) o qual possui duas fases: síntese de um controlador de realimentação estático que estabiliza o sistema, mas que pode não ser seguro para todas as condições iniciais. A segurança é então verificada via verificação de modelos limitada (\textit{bounded model checking} - BMC) ou aceleração abstrata; se a etapa de verificação falhar, um contraexemplo é fornecido ao mecanismo de síntese e o processo itera até que um controlador seguro seja obtido.
 
 O trabalho em questão apresenta excelentes resultados, porém ainda deixa de considerar aspectos de desempenho de projeto de controladores, considerando somente a estabilidade dos mesmos. Um bom aspecto é que a metodologia considera fragilidade na implementação dos controladores digitais.
 
 
 \section{Comparação entre os Trabalhos}
 
-Os trabalhos relacionados tratam de verificação de sistemas de controle que é uma das fases deste trabalho, e síntese de controladores de sistemas de controle. Pode-se notar a respeito dos trabalhos analisados que o problema de síntese de controladores digitais é pertinente, visto que este processo é bastante necessário na fase de projeto de um controlador digital. A síntese de controladores digitais para sistemas de controle foi observado como um problema complexo e de difícil uma grande abrangênciade problemas devido a muitos trabalhos abordarem o problema de diferentes maneiras e levando em consideração fatores diferentes. Sabendo disso, as principais diferenças entre a abordagem proposta nesse trabalho para as aqui discutidas podem ser listadas: trabalha com sistemas de controle em tempo discreto o qual é o que efetivamente é usado quando implementamos utilizando uma plataforma microprocesada; a metodologia proposta sintetiza e verifica controladores considerando requisitos de desempenho de sistemas de controle; e, finalmente, consideramos aspectos de implementação que podemn ocasionar mal funcionamento dos sistemas de controle, visto que os efeitos de FWL, por exemplo, podem levar a isso. A Tabela~\ref{table:related-work-comparison} mostra um quadro comparativo entre a metodologia proposto nesta dissertação e os trabalhos relacionados selecionados.
+Os trabalhos relacionados tratam de verificação de sistemas de controle que é uma das fases deste trabalho, e síntese de controladores de sistemas de controle. Pode-se notar a respeito dos trabalhos analisados que o problema de síntese de controladores digitais é pertinente, visto que este processo é bastante necessário na fase de projeto de um controlador digital. A síntese de controladores digitais para sistemas de controle foi observado como um problema complexo e de difícil uma grande abrangência de problemas devido a muitos trabalhos abordarem o problema de diferentes maneiras e levando em consideração fatores diferentes. Sabendo disso, as principais diferenças entre a abordagem proposta nesse trabalho para as aqui discutidas podem ser listadas: trabalha com sistemas de controle em tempo discreto o qual é o que efetivamente é usado quando implementamos utilizando uma plataforma microprocesada; a metodologia proposta sintetiza e verifica controladores considerando requisitos de desempenho de sistemas de controle; e, finalmente, consideramos aspectos de implementação que podemn ocasionar mal funcionamento dos sistemas de controle, visto que os efeitos de FWL, por exemplo, podem levar a isso. A Tabela~\ref{table:related-work-comparison} mostra um quadro comparativo entre a metodologia proposto nesta dissertação e os trabalhos relacionados selecionados.
 
 \begin{table}[ht]
     \renewcommand{\arraystretch}{1.0}
     \caption{Comparação dos trabalhos relacionados}
     \label{table:related-work-comparison}
     \centering
+    \scriptsize
     \begin{tabular}{c|c|c|c|c}
         \hline \shortstack{\bfseries Trabalhos} & \bfseries Suporte a & \bfseries Suporte a & \bfseries Considera os & \bfseries Síntese e\\
 \bfseries relacionados & \bfseries sistemas & \bfseries requisitos de & \bfseries efeitos & \bfseries de casos\\
@@ -94,8 +95,8 @@ Os trabalhos relacionados tratam de verificação de sistemas de controle que é um
 	\end{tabular}
 \end{table}
 
-Através da Tabela~\ref{table:related-work-comparison} pode-se observar que existem outros trabalhos que são capazes de localizar falhas em programas concorrentes. No entanto, nenhum deles é capaz de atingir ambos objetivos em programas escritos na linguagem C e, ainda mais, sem o auxílio de casos de teste previamente escritos, diferentemente do método proposto.
+Através da Tabela~\ref{table:related-work-comparison} pode-se observar que existem outros trabalhos que são capazes de síntese em sistemas de controle. No entanto, nenhum deles é capaz de atingir todos os objetivos aqui propostos.
 
 \section{Resumo}\label{chap-3-summary}
 
-Neste capítulo foram apresentados diversos trabalhos relacionados a algum dos seguintes problemas: localização de falhas, suporte a programas concorrentes, verificação de código escrito na linguagem C e/ou dependência de casos de testes externos. Após a apresentação de cada técnica, assim como uma breve discussão sobre as vantagens e desvantagens de cada uma delas, foi feita uma comparação com o método proposto neste trabalho. Foi possível observar que o método proposto aborda os três primeiros itens sem a necessidade de casos de testes externos, o que o diferencia dos demais trabalhos. O próximo capítulo apresenta a metodologia proposta para localizar falhas em programas concorrentes utilizando técnicas de sequencialização e BMC.
+Neste capítulo foram apresentados diversos trabalhos relacionados a algum dos seguintes problemas: verificação de controladores de sistemas de controle, suporte a distemas de controle em tempo discreto, síntese de controladores digitais, considerando requisitos de desempenho e efeitos FWL. Após a apresentação de cada técnica, assim como uma breve discussão sobre as vantagens e desvantagens de cada uma delas, foi feita uma comparação com a metodologia proposta neste trabalho. Foi possível observar que a metodologia proposta aborda todos os itens analisados, o que o diferencia dos demais trabalhos. O próximo capítulo apresenta a metodologia proposta para síntese de controladores digitais.
