--- a/references/references.bib
+++ b/references/references.bib
@@ -1277,3 +1277,15 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   year={2016},
   organization={IEEE}
 }
+@article{guennebaud2010eigen,
+  title={Eigen},
+  author={Guennebaud, Ga{\"e}l and Jacob, Benoit and others},
+  journal={URl: http://eigen.tuxfamily.org},
+  year={2010}
+}
+@article{mallet2017galgo,
+  title={GALGO: Genetic Algorithm in C++ with template metaprogramming and abstraction for constrained optimization.},
+  author={Mallet, Olivier},
+  journal={URl: https://github.com/olmallet81/GALGO-2.0},
+  year={2017}
+}
