--- a/thesis.tex
+++ b/thesis.tex
@@ -40,6 +40,7 @@
 \usepackage{systeme} 
 \usepackage{mathtools}
 \usepackage{float}
+\usepackage{multirow}
 %\usepackage{algorithm}
 %\usepackage[noend]{algpseudocode}
 
