--- a/0_cover/abbreviations.tex
+++ b/0_cover/abbreviations.tex
@@ -2,25 +2,25 @@
 \label{appendix:abreviacao}
 
 \noindent
+\textbf{AD}       - \textit{\textbf{A}nalógico \textbf{D}igital} \\
+\textbf{ATS}      - \textit{\textbf{A}daptative \textbf{T}ransition \textbf{S}ystem} \\
+\textbf{BDD}      - \textit{\textbf{B}anary \textbf{D}ecision \textbf{D}iagram} \\
+\textbf{BIBO}     - \textit{\textbf{B}ounded \textbf{I}nput \textbf{B}ounded \textbf{O}utput} \\
+\textbf{BMC}      - \textit{\textbf{B}ounded \textbf{M}odel \textbf{C}hecking} \\
+\textbf{CEGIS}    - \textit{\textbf{C}ounter \textbf{E}xample \textbf{G}uided \textbf{I}nductive \textbf{S}ynthesis} \\
+\textbf{CTL}      - \textit{\textbf{C}omputational \textbf{T}ree \textbf{L}ogic} \\
+\textbf{DA}       - \textit{\textbf{D}igital \textbf{A}nalógico} \\
+\textbf{FSM}      - \textit{\textbf{F}inite \textbf{S}tate \textbf{M}achine} \\
 \textbf{FWL}      - \textit{\textbf{F}inite \textbf{W}ord \textbf{L}ength} \\
-\textbf{PWA}      - \textit{\textbf{P}iece \textbf{W}ise \textbf{A}ffine} \\
+\textbf{LQR}      - \textit{\textbf{L}inear \textbf{Q}uadratic \textbf{R}egulator} \\
 \textbf{LTL}      - \textit{\textbf{L}inear \textbf{T}emporal \textbf{L}ogic} \\
 \textbf{MAP}      - \textit{\textbf{M}ean \textbf{A}rterial \textbf{P}ressure} \\
-\textbf{CEGIS}    - \textit{\textbf{C}ounter \textbf{E}xample \textbf{G}uided \textbf{I}nductive \textbf{S}ynthesis} \\
-\textbf{LQR}      - \textit{\textbf{L}inear \textbf{Q}uadratic \textbf{R}egulator} \\
-\textbf{FSM}      - \textit{\textbf{F}inite \textbf{S}tate \textbf{M}achine} \\
-\textbf{BDD}      - \textit{\textbf{B}anary \textbf{D}ecision \textbf{D}iagram} \\
 \textbf{MDD}      - \textit{\textbf{M}ultiple \textbf{D}ecision \textbf{D}iagram} \\
-\textbf{CTL}      - \textit{\textbf{C}omputational \textbf{T}ree \textbf{L}ogic} \\
-\textbf{BIBO}     - \textit{\textbf{B}ounded \textbf{I}nput \textbf{B}ounded \textbf{O}utput} \\
-\textbf{SISO}     - \textit{\textbf{S}ingle \textbf{I}nput \textbf{S}ingle \textbf{O}utput} \\
-\textbf{AD}       - \textit{\textbf{A}nalógico \textbf{D}igital} \\
-\textbf{DA}       - \textit{\textbf{D}igital \textbf{A}nalógico} \\
-\textbf{SMT}      - \textit{\textbf{S}atisfiability \textbf{M}odulo \textbf{T}heories} \\
-\textbf{SDP}      - \textit{\textbf{S}emi \textbf{D}efinite \textbf{P}rogramming} \\
-\textbf{ATS}      - \textit{\textbf{A}daptative \textbf{T}ransition \textbf{S}ystem} \\
-\textbf{RCLF}     - \textit{\textbf{R}obust \textbf{C}ontrol \textbf{L}Lyapunov-like \textbf{F}unction} \\
 \textbf{PSO}      - \textit{\textbf{P}article \textbf{S}warm \textbf{O}ptimization} \\
+\textbf{PWA}      - \textit{\textbf{P}iece \textbf{W}ise \textbf{A}ffine} \\
 \textbf{QPSO}     - \textit{\textbf{Q}uantic \textbf{P}article \textbf{S}warm \textbf{O}ptimization} \\
-\textbf{BMC}      - \textit{\textbf{B}ounded \textbf{M}odel \textbf{C}hecking} \\
-
+\textbf{RAM}      - \textit{\textbf{R}andom \textbf{A}ccess \textbf{M}emory} \\
+\textbf{RCLF}     - \textit{\textbf{R}obust \textbf{C}ontrol \textbf{L}Lyapunov-like \textbf{F}unction} \\
+\textbf{SDP}      - \textit{\textbf{S}emi \textbf{D}efinite \textbf{P}rogramming} \\
+\textbf{SISO}     - \textit{\textbf{S}ingle \textbf{I}nput \textbf{S}ingle \textbf{O}utput} \\
+\textbf{SMT}      - \textit{\textbf{S}atisfiability \textbf{M}odulo \textbf{T}heories} \\
