--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -1,30 +1,30 @@
 \chapter{Introdução}\label{chap-introduction}
 
 Um sistema de controle digital consiste de sensores, sistema controlado, algoritmos de controle e atuadores, que juntos buscam manter o comportamento das variáveis de uma planta (sistema controlado) sob controle, ou seja, garantem as respostas desejadas de estado estacionário e transitório~\cite{boyd1991linear}.
-O desenvolvimento de controladores digitais é uma tarefa fundamental na engenharia de controle, uma vez que eles são rotineiramente usados para muitas aplicações diferentes, que vão desde a indústria até noramo aeroespacial~\cite{simons1994levers}.
+O desenvolvimento de controladores digitais é uma tarefa fundamental na engenharia de controle, uma vez que eles são rotineiramente usados para muitas aplicações diferentes, que vão desde a indústria até no ramo aeroespacial~\cite{simons1994levers}.
 
 A teoria de controle digital visa preservar algumas propriedades baseadas em modelos de tempo discreto, por exemplo, estabilidade e robustez, que são necessárias para a operação correta de plantas reais através de um controlador digital. Controlar sistemas contínuos usando controladores digitais levanta problemas típicos de sistemas híbridos.
-Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (\textit{finite word length} - FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a pólos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho. ~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov et al. \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
+Além disso, arredondamento e quantização de amostras e coeficientes em controladores digitais, devido a implementações de comprimento de palavras finitas (\textit{finite word length} - FWL), podem levar a \textit{overflow}, oscilação de ciclo limite e sensibilidade a polos e zeros, o que pode causar instabilidade do sistema e degradação do desempenho~\cite{istepanian2012digital,BessaICF16,bessa2017formal}. De fato, esse tipo de sensibilidade é chamado de fragilidade~\cite{keel1997robust} e é importante para o projeto de sistemas de controle, uma vez que está diretamente relacionado à sua robustez. Na literatura, existem alguns estudos relacionados que consideram perturbações nas implementações de sistemas de controle; Yordanov et al. \cite{yordanov2012temporal} considera pequenas perturbações nas entradas aplicadas em um sistema dinâmico para a síntese de uma estratégia de controle de realimentação para um sistema de afinidade por partes (PWA) em tempo discreto a partir de uma especificação dada como uma fórmula de lógica linear temporal (LTL) sobre um conjunto de predicados lineares nas variáveis de estado do sistema.
 
-Algumas iniciativas que utilizam a verificação formal aplicada a sistemas de controle dinâmicos foram desenvolvidas nos últimos anos. Por exemplo, Bessa et al. \cite{bessa2017formal} apresentam um método de verificação para determinar a estabilidade incerta do sistema linear em relação aos controladores digitais, levando em conta aspectos de implementação, enquanto Wang et al., ampliam as técnicas tradicionais de verificação para implementação de controladores digitais, com o objetivo de abordar a validação da robustez no modelo e no nível de código. Abreu et al. \cite{abreu2016bounded} desenvolvem um método para verificar filtros digitais relativos a \textit{overflow} e ruído indesejado, que são causados por efeitos de quantização e arredondamento, e Belta~\cite{belta2014formal} verificaram a estabilidade em sistemas dinâmicos. Além disso, Racchetti et al.\cite{racchetti2015verification} geraram sequências de teste a partir de diagramas temporais de especificações de software e as executaram em tempo real, verificou-se parte de sua conformidade, salvou-se contornos de teste e analisou-os automaticamente através de um método de verificação.
+Algumas iniciativas que utilizam a verificação formal aplicada a sistemas de controle dinâmicos foram desenvolvidas nos últimos anos. Por exemplo, Bessa et al. \cite{bessa2017formal} apresentam um método de verificação para determinar a estabilidade incerta do sistema linear em relação aos controladores digitais, levando em conta aspectos de implementação, enquanto Wang et al., ampliam as técnicas tradicionais de verificação para implementação de controladores digitais, com o objetivo de abordar a validação da robustez no modelo e no nível de código. Abreu et al. \cite{abreu2016bounded} desenvolvem um método para verificar filtros digitais relativos a \textit{overflow} e ruído indesejado, que são causados por efeitos de quantização e arredondamento, e Belta~\cite{belta2014formal} verificaram a estabilidade em sistemas dinâmicos. Além disso, Racchetti et al.\cite{racchetti2015verification} geraram sequências de teste a partir de diagramas temporais de especificações de \textit{software} e as executaram em tempo real, verificou-se parte de sua conformidade, salvou-se contornos de teste e analisou-os automaticamente através de um método de verificação.
 Nilsson et al.~\cite{nilsson2016correct} aplicam métodos formais de controle de cruzeiro adaptativo e executa síntese de controlador que é correta por construção.
 
-Em sistemas de controle, parâmetros de resposta a degraus são comumente usados para especificar um elemento de controle, a fim de indicar que um sistema de controle de malha fechada é seguro em relação às suas especificações de desempenho, ou seja, quando sua resposta a degrau atende, por exemplo, especificações de tempo e \textit{overshoot}~\cite{franklin1998digital}.
+Em sistemas de controle, parâmetros de resposta a degraus são comumente usados para especificar um elemento de controle, a fim de indicar que um sistema de controle de malha fechada é seguro em relação às suas especificações de desempenho, ou seja, quando sua resposta ao degrau atende, por exemplo, especificações de tempo assentamento e sobressinal~\cite{franklin1998digital}.
  %
 No entanto, existem alguns estudos relacionados que abordam parâmetros de desempenho com métodos formais.
-Nesse sentido, Gross et al. apresentam uma abordagem para formalizar requisitos comuns de sistemas de controle de atitude de naves espaciais, onde os tempos de assentamento são verificados através de testes de hipóteses \cite{gross2017formal}; Jin et al. propõem uma estrutura baseada em métodos formais para capturar requisitos de modelos em malha fechada de sistemas de controle em escala industrial, incluindo tempo de assentamento e \textit{overshoot} \cite{jin2015mining}.
-De fato, dado que perturbações ou mudanças em entradas pode levar a oscilações transitórias em saídas, é importante que estes últimos estejam dentro da região de assentamento, isto é, uma área especificando os desvios tolerados de uma dada referência, dentro de um tempo de assentamento especificado, e os \textit{overshoots} são menores do que um valor máximo requerido~\cite{jin2015mining}.
+Nesse sentido, Gross et al. apresentam uma abordagem para formalizar requisitos comuns de sistemas de controle de atitude de naves espaciais, onde os tempos de assentamento são verificados através de testes de hipóteses \cite{gross2017formal}; Jin et al. propõem uma estrutura baseada em métodos formais para capturar requisitos de modelos em malha fechada de sistemas de controle em escala industrial, incluindo tempo de assentamento e sobressinal \cite{jin2015mining}.
+De fato, dado que perturbações ou mudanças em entradas pode levar a oscilações transitórias em saídas, é importante que estes últimos estejam dentro da região de assentamento, isto é, uma área especificando os desvios tolerados de uma dada referência, dentro de um tempo de assentamento especificado, e os sobressinais são menores do que um valor máximo requerido~\cite{jin2015mining}.
 
 Também é importante reforçar que os efeitos FWL realmente têm um grande impacto no comportamento do sistema~\cite{istepanian2012digital}. Geralmente, os controladores são fortemente influenciados por ligeira imprecisão (por exemplo, erro de arredondamento e quantização), o que, em alguns casos, pode até levar à instabilidade. De fato, quando implementamos um sistema de controle em uma plataforma realista (microcontroladores/microprocessadores), inevitavelmente lidamos com efeitos FLW, incluindo quantização de todos os valores numéricos (somas e produtos) e sinais de entrada, que afetam notavelmente os polos e zeros (localização) \cite{li1997pole}.
 
-Como consequência, isso leva a um comportamento diferente, quando comparado com os requisitos de projeto, como se pode perceber ao longo deste trabalho e seus resultados. Além disso, vale notar que o tempo de assentamento e o \textit{overshoot} são requisitos típicos de projeto de sistemas de controle, o que leva a um comportamento específico de um sistema em desenvolvimento, juntamente com uma metodologia específica. Eles também são extremamente relacionados uns com os outros, embora sejam geralmente objetivos conflitantes~\cite{franklin1998digital}.
+Como consequência, isso leva a um comportamento diferente, quando comparado com os requisitos de projeto, como se pode perceber ao longo deste trabalho e seus resultados. Além disso, vale notar que o tempo de assentamento e o sobressinal são requisitos típicos de projeto de sistemas de controle, o que leva a um comportamento específico de um sistema em desenvolvimento, juntamente com uma metodologia específica. Eles também são extremamente relacionados uns com os outros, embora sejam geralmente objetivos conflitantes~\cite{franklin1998digital}.
 
-Geralmente, precisamos que nosso sistema se estabilize dentro de um certo período, com um \textit{overshoot} específico, e esse requisito revela prontamente a importância de verificar essas propriedades.
-Nesse sentido, aplicações clínicas geralmente exigem o estabelecimento de especificações de projeto realistas \cite{walsh2013relationship} e, por exemplo, sistemas de malha fechada devem responder rápida e suavemente a mudanças nos pontos de referência da pressão arterial média (MAP), operação que normalmente é realizado por um anestesista, sem \textit{overshoot} excessivo; caso contrário, pode causar sérios problemas em um centro cirúrgico \cite{walsh2013relationship}.
+Geralmente, precisamos que nosso sistema se estabilize dentro de um certo período, com um sobressinal específico, e esse requisito revela prontamente a importância de verificar essas propriedades.
+Nesse sentido, aplicações clínicas geralmente exigem o estabelecimento de especificações de projeto realistas \cite{walsh2013relationship} e, por exemplo, sistemas de malha fechada devem responder rápida e suavemente a mudanças nos pontos de referência da pressão arterial média (MAP), operação que normalmente é realizado por um anestesista, sem sobressinal excessivo; caso contrário, pode causar sérios problemas em um centro cirúrgico \cite{walsh2013relationship}.
 
-Nos últimos anos, a literatura trouxe alguns trabalhos que abordam a síntese de programas, que é uma técnica usada para encontrar entidades que satisfaçam a intenção do usuário expressa em alguma forma de restrições \cite{jha2010oracle}. Uma técnica específica de síntese de programa chamada Síntese Indutiva Guiada por Contra-Exemplo (CEGIS) é uma abordagem que determina parâmetros desconhecidos dentro de programas parciais, de forma que os elementos resultantes satisfaçam algumas propriedades de correção~\cite{ravanbakhsh2015counter}. Alguns trabalhos foram feitos utilizando a técnica CEGIS para a realização de síntese, como a descrita por Abate \textit{et. al}, onde mostram os pontos fortes de um sintetizador indutivo guiado por contra-exemplos comparado com a abordagem de um solucionador de teoria, explorando o espaço da solução de maneira mais eficiente sem depender da orientação do usuário~\cite{abate2018counterexample}.
+Nos últimos anos, a literatura trouxe alguns trabalhos que abordam a síntese de programas, que é uma técnica usada para encontrar entidades que satisfaçam a intenção do usuário expressa em alguma forma de restrições \cite{jha2010oracle}. Uma técnica específica de síntese de programa chamada síntese indutiva guiada por contraexemplo (CEGIS) é uma abordagem que determina parâmetros desconhecidos dentro de programas parciais, de forma que os elementos resultantes satisfaçam algumas propriedades de correção~\cite{ravanbakhsh2015counter}. Alguns trabalhos foram feitos utilizando a técnica CEGIS para a realização de síntese, como a descrita por Abate \textit{et. al}, onde mostram os pontos fortes de um sintetizador indutivo guiado por contraexemplos comparado com a abordagem de um solucionador de teoria, explorando o espaço da solução de maneira mais eficiente sem depender da orientação do usuário~\cite{abate2018counterexample}.
 
-Trabalhos que aplicam CEGIS para estabilizar controladores podem ser encontrados na literatura, como o descrito em \cite{ravanbakhsh2015counter} onde é investigado o problema de sintetizar controladores de comutação para estabilizar a planta de tempo contínuo; no entanto, em sistemas de controle, é importante cuidar dos requisitos de desempenho, como tempo de assentamento e estabilidade, a fim de satisfazer um comportamento específico~\cite{ogata2002modern}.
+Trabalhos que aplicam CEGIS para estabilizar controladores podem ser encontrados na literatura, como o descrito em \cite{ravanbakhsh2015counter} onde é investigado o problema de sintetizar controladores de comutação para estabilizar a planta de tempo contínuo; no entanto, em sistemas de controle, é importante cuidar dos requisitos de desempenho, como tempo de assentamento e sobressinal, a fim de satisfazer um comportamento específico~\cite{ogata2002modern}.
 
 Problemas relativos a efeitos FWL na implementação de controladores digitais em plataformas do mundo real devem ser levados em consideração quando se projeta controladores digitais, conforme falado anteriormente nos trabalhos \cite{BessaICF16,bessa2017formal}. Portanto, deve-se considerar esses fatores quando se sintetiza controladores digitais para que o funcionamento do sistema ocorra de acordo com o esperado.
 
@@ -44,9 +44,9 @@ Problemas relativos a efeitos FWL na implementação de controladores digitais em 
 
 \section{Descrição do Problema}
 
-Este trabalho visa resolver o problema levantado nos últimos parágrafos e apresenta uma técnica formal para sintetizar um controlador, avaliando os requisitos de desempenho em sistemas de controle digital, utilizando a técnica CEGIS e algoritmos genéticos~\cite{deb2004introduction}, levando em consideração os efeitos FWL, que foi implementado em um verificador de modelo limitado chamado DSVerifier \cite{ismail2015dsverifier}.
+Este trabalho visa resolver o problema levantado nos últimos parágrafos e apresenta uma técnica formal para sintetizar um controlador, avaliando os requisitos de desempenho em sistemas de controle digital, utilizando uma técnica baseada em CEGIS e algoritmos genéticos~\cite{deb2004introduction}, levando em consideração os efeitos FWL, que foi implementado em um verificador de modelo limitado chamado DSVerifier \cite{ismail2015dsverifier}.
 
-Algoritmos genéticos são utilizados neste trabalho com o objetivo de gerar um controlador canditado que satisfaça aos requisitos de tempo de assentamento e \textit{overshoot}, sendo uma das etapas na metodologia de síntese desenvolvida. Nossa metodologia visa sintetizar um controlador que também satisfaça aos requisitos oriundos dos efeitos FWL.
+Algoritmos genéticos são utilizados neste trabalho com o objetivo de gerar um controlador canditado que satisfaça aos requisitos de tempo de assentamento e sobressinal, sendo uma das etapas na metodologia de síntese desenvolvida. Nossa metodologia visa sintetizar um controlador que também satisfaça aos requisitos oriundos dos efeitos FWL.
 
 %Este trabalho visa resolver o problema da localização de falhas em programas concorrentes utilizando técnicas de verificação de modelos limitada de forma automática. Para tanto, utilizaram-se as seguintes abordagens: ($1$) aplicação de uma gramática e regras de transformação para possibilitar a sequencialização de programas concorrentes e ($2$) uso de contraexemplos obtidos por um verificador de modelos para localizar falhas em tais programas.
 %
@@ -56,25 +56,25 @@ Assim, o método proposto utiliza técnicas de síntese de programas, algoritmos ge
 
 \section{Objetivos}
 
-O principal objetivo deste trabalho é propor um método para sintetizar um controlador digital obedecendo requisitos de performance e levando em a ação dos efeitos FWL nos controladores.
+O principal objetivo deste trabalho é propor um método para sintetizar um controlador digital obedecendo requisitos de performance e levando a ação dos efeitos FWL nos controladores.
 
 Os objetivos específicos são:
 
 \begin{itemize}
 
-\item Propor um metodologia formal para verificação de requisitos de performance, como tempo de assentamento e \textit{overshoot}.
+\item Propor um metodologia formal para verificação de requisitos de performance, como tempo de assentamento e sobressinal.
 
 \item Propor uma metodologia de síntese de controladores digitais, baseada na técnica CEGIS, utilizando algoritmos genéticos.
 
-\item Avaliar experimentalmente o método proposto utilizando benchmarks bastantes diversificados, incluindo sitemas sintéticos, bem como sistemas do mundo real extraídos da literatura.
+\item Avaliar experimentalmente o método proposto utilizando \textit{benchmarks} bastante diversificados, incluindo sitemas sintéticos, bem como sistemas do mundo real extraídos da literatura.
 
 \end{itemize}
 
 \section{Contribuições}
 
-Este trabalho tem três principais contribuições. Primeiro, um método para sintetizar controlodores digitais utilizando a técnica de CEGIS levando em conta fragilidade e efeitos FWL nos controladores. Segundo, uma abordagem para gerar controladores candidatos que obedeçam a requisitos de performance através de algoritmos genéticos, como uma das etapas da síntese de controladores. Terceiro, de acordo com os conhecimentos obtidos neste trabalho e os resultados obtidos, o método apresentado é capaz de assistir engenheiros de controle no projeto e implementação de controladores digitais.
+Este trabalho tem quatro principais contribuições. Primeiro, um método para sintetizar controlodores digitais utilizando a técnica de CEGIS levando em conta fragilidade e efeitos FWL nos controladores. Segundo, uma abordagem para gerar controladores candidatos que obedeçam a requisitos de performance através de algoritmos genéticos, como uma das etapas da síntese de controladores. Terceiro, como parte do método de síntese, propomos técnicas para verificar formalmente sistemas de controle digital, com respeito a requisitos de performance. Por último, de acordo com os conhecimentos obtidos neste trabalho e os resultados obtidos, o método apresentado é capaz de assistir engenheiros de controle no projeto e implementação de controladores digitais.
 
 \section{Organização da Dissertação}
 
-A dissertação está organizada da seguinte maneira: no Capítulo~\ref{chap_background} são apresentados os conceitos básicos de verificação de modelos limitada e programas concorrentes e ao fim do capítulo é feita uma descrição do uso de contraexemplos para localização de falhas e sua aplicação em programas sequenciais; o Capítulo~\ref{chap_related_work} apresenta um resumo dos trabalhos relacionados à verificação de modelos limitada aplicada à programas concorrentes e à localização de falhas em programas e no fim do capítulo, os trabalhos são comparados, salientando as principais diferenças entre a abordagem proposta neste trabalho em relação às existentes; o Capítulo~\ref{chap_methodology} descreve o método proposto para sequencializar programas concorrentes, juntamente da abordagem para localizar as falhas existentes em tais programas, baseando-se em contraexemplos obtidos através de um verificador de modelos; no Capítulo~\ref{chap_results} são apresentados os resultados de localização de falhas nos programas extraídos da suíte de teste e também é feita uma discussão dos resultados obtidos; e por fim o Capítulo~\ref{chap_conclusion} apresenta as conclusões do trabalho, além de apresentar sugestões para trabalhos futuros.
+A dissertação está organizada da seguinte maneira: no Capítulo~\ref{chap_background} são apresentados os conceitos básicos de verificação formal, sistemas dinâmicos lineares, técnicas de projeto de controle para sistemas discreto e ao fim, falamos a respeito de implementação de controladores digiatais no mundo real; o Capítulo~\ref{chap_related_work} apresenta um resumo dos trabalhos relacionados à verificação formal aplicada à controladores de sistemas de controle, à síntese de controladores de sistemas de controle e no fim do capítulo, os trabalhos são comparados, salientando as principais diferenças entre a abordagem proposta neste trabalho em relação às existentes; o Capítulo~\ref{chap_methodology} descreve o método proposto para sintetizar controladores digitais, considerando aspecos de implementação, como os efeitos FWL; no Capítulo~\ref{chap_results} são apresentados os resultados experimentais feitos em um conjunto de \textit{benchmarks} e também é feita uma discussão dos resultados obtidos; e por fim o Capítulo~\ref{chap_conclusion} apresenta as conclusões do trabalho, além de apresentar sugestões para trabalhos futuros.
 
